--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -72,5 +72,10 @@
   "sentSuccessfully": "Sent successfully",
   "hello": "Hello",
   "services": "Services",
-  "license": "License"
+  "license": "License",
+  "myRequests": "My Requests",
+  "menu": "Menu",
+  "currentRequests": "Current Requests",
+  "underReview": "Under Review",
+  "requestCompleted": "Request Completed"
 }
