add menu screen

--- a/assets/translations/ar-EG.json
+++ b/assets/translations/ar-EG.json
@@ -91,5 +91,9 @@
   "fingerprint": "البصمة ",
   "operationCancelled": "تم الغاء العملية",
   "youCanLoginWithCredentials": "يمكنك تسجيل الدخول باستخدام البيانات الشخصية",
-  "loginFailed": "فشل تسجيل الدخول"
+  "loginFailed": "فشل تسجيل الدخول",
+  "logout": "تسجيل الخروج",
+  "areYouSure": "هل انت متاكد",
+  "cancel": "الغاء",
+  "ok": "حسنا"
 }
