--- a/assets/translations/ar-EG.json
+++ b/assets/translations/ar-EG.json
@@ -106,5 +106,7 @@
   "enterPassword": "ادخال كلمة المرور",
   "confirmPassword": "تأكيد كلمة المرور",
   "agreeTo": "الموافقة على",
-  "termsPrivacy": "الشروط والاحكام وسياسة الخصوصية"
+  "termsPrivacy": "الشروط والاحكام وسياسة الخصوصية",
+  "services2": "خدمات",
+  "pleaseChooseService": "برجاء اختيار احد الخدمات التالية"
 }
