choose file sercice required

--- a/assets/translations/ar-EG.json
+++ b/assets/translations/ar-EG.json
@@ -114,5 +114,6 @@
   "applicationSteps": "خطوات التقديم",
   "requestService": "طلب الخدمة",
   "pleaseAttachDocuments": "برجاء ارفاق المستندات المطلوبة",
-  "followUp": "متابعة"
+  "followUp": "متابعة",
+  "delete": "حذف"
 }
