--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -114,5 +114,6 @@
   "applicationSteps": "Application Steps",
   "requestService": "Request Service",
   "pleaseAttachDocuments": "Please attach the required documents",
-  "followUp": "Follow Up"
+  "followUp": "Follow Up",
+  "delete": "Delete"
 }
