--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -123,5 +123,6 @@
   "pay": "Pay",
   "later": "Later",
   "feesPaid": "Fees Paid",
-  "feesNotPaid": "Fees Not Paid"
+  "feesNotPaid": "Fees Not Paid",
+  "paymentSuccessful": "Payment Successful"
 }
