--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -126,6 +126,7 @@
   "feesNotPaid": "Fees Not Paid",
   "paymentSuccessful": "Payment Successful",
   "noMoreServices": "No more services",
-  "pleaseSelectBranch": "Please select branch"
+  "pleaseSelectBranch": "Please select branch",
+  "noMoreRequests": "No more requests"
 
 }
