handel if no pay or no filesAttachment when send Service

--- a/assets/translations/ar-EG.json
+++ b/assets/translations/ar-EG.json
@@ -138,5 +138,6 @@
   "transactionNumber": "رقم المعاملة",
   "serviceType": "نوع الخدمة",
   "serviceName": "اسم الخدمة",
-  "invoiceDetails": "تفاصيل الفاتورة"
+  "invoiceDetails": "تفاصيل الفاتورة",
+  "confirmationRequestService": "تأكيد طلب الخدمة"
 }
