feat: Implement forget password and reset password functionality
- Added `StateBox` class for managing state in BLoC.
- Created `ForgetPasswordCubit` and `ResetPasswordCubit` for handling business logic.
- Developed UI components for forget password and reset password screens.
- Integrated `pin_code_fields` package for OTP input.
- Implemented API calls for sending and verifying OTP.
- Added localization support for user messages.
- Created reusable widgets for form inputs and buttons.
- Enhanced error handling and loading states in the UI.

--- a/assets/translations/ar-EG.json
+++ b/assets/translations/ar-EG.json
@@ -148,5 +148,12 @@
   "enterValueLessThan": "أدخل قيمة أقل من",
   "nameIsRequired": "الاسم مطلوب",
   "pleaseEnterAValidTextOrNumbersOnly": "برجاء إدخال نص صحيح أو أرقام فقط",
-  "enterValue": "أدخل قيمة"
+  "enterValue": "أدخل قيمة",
+  "pleaseEnterOtpSentToPhone": "برجاء ادخال رقم رمز التحقق المرسل الي هاتفك",
+  "pleaseEnterNationalId": "برجاء ادخال الرقم القومي",
+  "newPassword": "كلمة المرور الجديدة",
+  "confirmNewPassword": "تأكيد كلمة المرور الجديدة",
+  "relatedTo": "الخاص ب",
+  "codeVerifiedSuccessfully": "تم التحقق من الرمز بنجاح",
+  "successfully": "تم بنجاح "
 }
