`Added my_request_details feature, updated translations, and modified related code`

--- a/assets/translations/ar-EG.json
+++ b/assets/translations/ar-EG.json
@@ -155,5 +155,7 @@
   "confirmNewPassword": "تأكيد كلمة المرور الجديدة",
   "relatedTo": "الخاص ب",
   "codeVerifiedSuccessfully": "تم التحقق من الرمز بنجاح",
-  "successfully": "تم بنجاح "
+  "successfully": "تم بنجاح ",
+  "requestAttachments": "مرفقات الطلب",
+  "requestData": "بيانات الطلب"
 }
